Fixed some spacing and img size

--- a/src/style.css
+++ b/src/style.css
@@ -58,7 +58,7 @@ p {
 }
 
 .project-description {
-  padding: 20px;
+  padding: 20px 60px 120px;
 }
 
 .btn-branding-outline {
